Post(게시글) PK 타입 변경 Integer(INT) -> Long(BIGINT)